SOlo activity background refrences album art

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SoloMusicActivity"></activity>
+        <activity android:name=".SoloMusicActivity">
+
+            android:theme="@style/AppTheme.NoActionBar"
+        </activity>
     </application>
 
 </manifest>
